Revision history for Perl extension MooX-BuildArgs.

{{$NEXT}}

 - Require perl 5.8.1.
 - Simplify VERSION declarations.

0.06 2019-02-14T18:50:14Z

 - Fix a couple PAUSE indexing issues!

0.05 2019-02-14T18:03:13Z

 - Use Data::MethodProxy instead of Config::MethodProxy.
 - Use Test2::V0 instead of Test2::Bundle::Extended.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.04 2016-11-26

 - Correct a typographical and a grammar mistake. @ppentchev
 - Let the proxy args test pass on recent versions of Perl. @ppentchev

0.03 2016-11-09

 - Fix a couple of typographical errors. @ppentchev
 - Switch from Test::Stream to Test2::Suite. @ppentchev
 - Use Config::MethodProxy in MooX::MethodProxyArgs.

0.02 2015-12-29

 - Add MooX::MethodProxyArgs.
 - Use Test::Stream for tests.
 - Make BuildArgsHooks future compatibility tests work if the test
   hooks are called.

0.01 2014-11-07

 - First release.
