@@ -5,7 +5,6 @@ use Test2::V0;
 
 {
     package Foo;
-    use 5.008001;
     use strictures 2;
 
     use Moo;
